--- a/blackext/index.html
+++ b/blackext/index.html
@@ -59,7 +59,7 @@
 					<p>Внутри расширения располагаются другие расширения, чтобы все ваши потребности решались только с этим продуктом! Хотите предложить что-то ещё? <a href="https://invite.gg/exewire" target="_blank" rel="noopener">Discord!</a></p>
 				</div>
 			</div>
-			<div class="columns downloads has-text-centered" id="downloads">
+			<div class="columns downloads has-text-centered" id="downloads-1">
 				<div class="column">
 					<a class="button is-info is-large" href="#download">Установить</a>
 				</div>
@@ -68,7 +68,7 @@
 				<div>
 					<a class="modal-close" href="#" title="Close">X</a>
 					<h1 style="text-align: center!important;">Все версии</h1>
-					<div class="columns downloads has-text-centered" id="downloads">
+					<div class="columns downloads has-text-centered" id="downloads-2">
 						<div class="column">
 							<a class="button is-info is-large" href="https://exewire.github.io/blackext/img/chrome.png">Chrome</a>
 							<p class="is-size-6">v.0.1.68 [17.02.2020]</p>
