fixed images (maybe okay)

--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -8,12 +8,12 @@
 	<meta content="ExeWire" name="author">
 	<title>Чёрные темы</title>
 	<link href="../style.css" rel="stylesheet">
-	<link href="../img/exewire.png" rel="icon" type="image/png">
+	<link href="../img/exewire.webp" rel="icon" type="image/png">
 </head>
 <body class="bs-docs-home">
 	<main class="bs-docs-masthead" id="content" tabindex="-1">
 		<div class="container">
-			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img onclick="history.back(-1); return false;" alt="ExeWire Logo" class="img-responsive" src="../img/exewire.png"></span>
+			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img onclick="history.back(-1); return false;" alt="ExeWire Logo" class="img-responsive" src="../img/exewire.webp"></span>
 			<h2 class="lead">Чёрные темы для приложений.</h2>
 			<p class="lead">Здесь, вы сможете скачать темы для других приложений и инструкция для их установки.</p>
 		</div>
@@ -22,35 +22,35 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для Discord</h2>
 		<p class="lead">Когда я перешёл в Дискорд, я даже не подозревал, что есть такой плагин, как BetterDiscord для кастомизации клиента Discord. Позже, я доработал тему и предлагаю ознакомиться с ней. ИНСТРУКЦИЯ: сначала установите BetterDiscord, перейдя по кнопке. После открытия в Discord плагина, закройте Discord и зайдите в папку "AppData/Roaming/BetterDiscord/themes" и закиньте туда файл, который вы скачаете через другую кнопку.</p>
-		<img alt="Discord" class="img-responsive" src="../img/discord.png">
+		<img alt="Discord" class="img-responsive" src="../img/discord.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" style="margin-right:10px;" href="https://github.com/rauenzi/BetterDiscordApp/releases">Скачать BetterDiscord</a><a class="btn btn-outline btn-lg" href="BlackDiscord.theme.css">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для Ripcord</h2>
 		<p class="lead">После, меня познакомили с клиентом Discord - Ripcord. Он не использует Electron и весит очень мало, 30 МБ и оперативной памяти использует столько же! Для неё также нашлась чёрная тема, которую я и написал! ИНСТРУКЦИЯ: просто закиньте файлик в корень программы. - в ту же папку, где она и располагается.</p>
-		<img alt="Ripcord" class="img-responsive" src="../img/ripcord.png">
+		<img alt="Ripcord" class="img-responsive" src="../img/ripcord.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="custom_theme.json">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для Telegram</h2>
 		<p class="lead">В прошлом году, Телеграм разрешил перекрашивать их клиент. Я немного не понимаю, почему некоторые элементы перекрашиваются правильно, а другие - нет! Надеюсь на исправление клиента, ибо моя тема не полностью готова из-за этого. ИНСТРУКЦИЯ: просто перейдите по ссылке при запущенном Телеграме.</p>
-		<img alt="Telegram" class="img-responsive" src="../img/tg.png">
+		<img alt="Telegram" class="img-responsive" src="../img/tg.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="tg://addtheme?slug=jNhOxUW47QCKljyH">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для VimeWorld</h2>
 		<p class="lead">Как бы вы ненавидели Майнкрафт, а она захватила миллионы детских умов своей простотой и уникальным открытым миром. Есть клиент VimeWorld. Он имеет HTML-начинку. Я быстренько накидал кода и клиент теперь выглядит чище с моей чёрной темой!</p>
-		<img alt="VimeWorld" class="img-responsive" src="../img/vimeworld.png">
+		<img alt="VimeWorld" class="img-responsive" src="../img/vimeworld.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="vimeworld-hacker.css">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для PrimeWorld</h2>
 		<p class="lead">Друг показал игру Prime World и она мне понравилась. Клиент также имеет HTML-начинку, поэтому, мне было легко перекрасить в чёрный! ИНСТРУКЦИЯ: распаковать архив и заменить папку в игре.</p>
-		<img alt="PrimeWorld" class="img-responsive" src="../img/primeworld.png">
+		<img alt="PrimeWorld" class="img-responsive" src="../img/primeworld.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="black_primeworld.7z">Скачать тему</a></p></div>
 	</div>
 </body>
