--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -8,12 +8,12 @@
 	<meta content="ExeWire" name="author">
 	<title>ExeWire Developer</title>
 	<link href="style.css" rel="stylesheet">
-	<link href="img/exewire.png" rel="icon" type="image/png">
+	<link href="img/exewire.webp" rel="icon" type="image/png">
 </head>
 <body class="bs-docs-home">
 	<main class="bs-docs-masthead" id="content" tabindex="-1">
 		<div class="container">
-			<p class="lead">Добро пожаловать!</p><span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img alt="ExeWire Logo" class="img-responsive" src="img/exewire.png"></span>
+			<p class="lead">Добро пожаловать!</p><span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img alt="ExeWire Logo" class="img-responsive" src="img/exewire.webp"></span>
 			<p class="lead">My name is ExeWire.</p>
 			<p class="lead">Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно.</p>
 		</div>
@@ -22,35 +22,35 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Браузерное расширение "Чёрный Интернет"</h2>
 		<p class="lead">Уже год, как я разрабатываю экспериментальное расширение, которое перекрашивает все популярно-кликабельные сайты в полностью чёрный цвет, позволяя с максимальным комфортом посещать сайты в ночное время суток! Из-за того, что внутри расширения располагаются другие 15 расширений, я не могу выложить его в WebStore из-за всяческих лицензионных соглашений - я просто соединил все мелкие расширение во едино для экономии.</p>
-		<img alt="Black Internet" class="img-responsive" src="img/blackext.png">
+		<img alt="Black Internet" class="img-responsive" src="img/blackext.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackext">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Electron-приложение "ExDesk"</h2>
 		<p class="lead">Я мечтал написать свою пародию на операционную систему и моя мечта осуществилась - после изучения HTML, CSS, JS и моему знакомству с Electron, я написал приложение, которое внешне напоминает систему! Да-да, я знаю, что никому не нравится Electron, ибо это "урезанный Chrome", но есть ли другой вариант? Пока аналогов нет или пока я не изучу что-то подходящее, увы, будет так.</p>
-		<img alt="ExDesk" class="img-responsive" src="img/exdesk.png">
+		<img alt="ExDesk" class="img-responsive" src="img/exdesk.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/exdesk">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрные темы для Win-приложений</h2>
 		<p class="lead">Discord, Telegram, VimeWorld, Prime World - и это не предел! Я крашу в чёрный всё, что кажется мне уместным, чтобы его покрасили в чёрный!</p>
-		<img alt="BlackThemes" class="img-responsive" src="img/blackthemes.png">
+		<img alt="BlackThemes" class="img-responsive" src="img/blackthemes.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/blacktheme">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрный скин для AIMP "AIMPBlack"</h2>
 		<p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хороший.</p>
-		<img alt="AIMPBlack" class="img-responsive" src="img/aimpblack.png">
+		<img alt="AIMPBlack" class="img-responsive" src="img/aimpblack.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/aimpblack.acs4">Скачать</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрный скин для игры в клиент osu!fx "Black!osu"</h2>
 		<p class="lead">После знакомства с клиентом популярной игры osu!fx, мне жутко понравилась полная поддержка скинов и я тут же ринулся делать полноценный чёрный скин.</p>
-		<img alt="Black!osu" class="img-responsive" src="img/blackosu.png">
+		<img alt="Black!osu" class="img-responsive" src="img/blackosu.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" style="margin-right:10px;" href="black!osu[en].osk">EN</a><a class="btn btn-outline btn-lg" href="black!osu[ru].osk">RU</a></p></div>
 	</div>
 </body>
