--- a/exdesk/index.html
+++ b/exdesk/index.html
@@ -5,13 +5,13 @@
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
 	<link href="exdesk.css" rel="stylesheet" type="text/css">
-	<link href="../img/exewire.png" rel="icon" type="image/png">
+	<link href="../img/exewire.webp" rel="icon" type="image/png">
 	<title>ExDesk</title>
 </head>
 <body>
 	<header>
 		<div class="container">
-			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img onclick="history.back(-1); return false;" href="https://exewire.github.io/" alt="ExeWire Logo" class="img-responsive" src="../img/exdesk.png"></a></span>
+			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img onclick="history.back(-1); return false;" href="https://exewire.github.io/" alt="ExeWire Logo" class="img-responsive" src="../img/exdesk.webp"></a></span>
 		</div>
 	</header>
 	<div class="hero text-center">
@@ -20,7 +20,7 @@
 				<h1 class="f00-light text-white">ExDesk</h1>
 				<p class="col-md-8 mx-auto mb-4 f3-light">Desktop-приложение с ОС-интерфейсом для открытия приложений и игр на HTML &amp; JS</p><a class="mx-1 my-3 f3 btn btn-large btn-desktop-purple" href="https://exewire.github.io/exdesk/ExDesk.exe">Скачать (64-бит)</a>
 			</div>
-			<div class="mx-auto mb-6" style="margin-top: 40px"><img alt="Скриншот приложения ExDesk" class="app-screenshot" src="../img/exdesk_screen.png"></div>
+			<div class="mx-auto mb-6" style="margin-top: 40px"><img alt="Скриншот приложения ExDesk" class="app-screenshot" src="../img/exdesk_screen.webp"></div>
 		</div>
 	</div>
 </body>
