fix instruction img

--- a/blackext/index.html
+++ b/blackext/index.html
@@ -70,7 +70,7 @@
 					<h1 style="text-align: center!important;">Все версии</h1>
 					<div class="columns downloads has-text-centered" id="downloads-2">
 						<div class="column">
-							<a class="button is-info is-large" href="https://exewire.github.io/blackext/img/chrome.webp">Chrome</a>
+							<a class="button is-info is-large" href="https://exewire.github.io/blackext/img/chrome.png">Chrome</a>
 							<p class="is-size-6">v.0.1.68 [17.02.2020]</p>
 						</div>
 						<div class="column">
