add build ExDesk

--- a/exdesk/index.html
+++ b/exdesk/index.html
@@ -18,7 +18,7 @@
 		<div class="container-new px-3">
 			<div>
 				<h1 class="f00-light text-white">ExDesk</h1>
-				<p class="col-md-8 mx-auto mb-4 f3-light">Desktop-приложение с ОС-интерфейсом для открытия приложений и игр на HTML &amp; JS</p><a class="mx-1 my-3 f3 btn btn-large btn-desktop-purple" href="https://exewire.github.io/exdesk/ExDesk.exe">Скачать (64-бит)</a>
+				<p class="col-md-8 mx-auto mb-4 f3-light">Desktop-приложение с ОС-интерфейсом для открытия приложений и игр на HTML &amp; JS</p><a class="mx-1 my-3 f3 btn btn-large btn-desktop-purple" href="https://exewire.github.io/exdesk/exdesk.7z">Скачать (64-бит)</a>
 			</div>
 			<div class="mx-auto mb-6" style="margin-top: 40px"><img alt="Скриншот приложения ExDesk" class="app-screenshot" src="../img/exdesk_screen.webp"></div>
 		</div>
