fixed Discord theme

--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -23,7 +23,7 @@
 		<h2 class="bs-docs-featurette-title">Чёрная тема для Discord</h2>
 		<p class="lead">Когда я перешёл в Дискорд, я даже не подозревал, что есть такой плагин, как BetterDiscord для кастомизации клиента Discord. Позже, я доработал тему и предлагаю ознакомиться с ней. ИНСТРУКЦИЯ: сначала установите BetterDiscord, перейдя по кнопке. После открытия в Discord плагина, закройте Discord и зайдите в папку "AppData/Roaming/BetterDiscord/themes" и закиньте туда файл, который вы скачаете через другую кнопку.</p>
 		<img alt="Discord" class="img-responsive" src="../img/discord.webp">
-		<p class="lead"><a class="btn btn-outline btn-lg" style="margin-right:10px;" href="https://github.com/rauenzi/BetterDiscordApp/releases">Скачать BetterDiscord</a><a class="btn btn-outline btn-lg" href="BlackDiscord.theme.css">Скачать тему</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" style="margin-right:10px;" href="https://github.com/rauenzi/BetterDiscordApp/releases">Скачать BetterDiscord</a><a class="btn btn-outline btn-lg" href="Blackord.theme.css">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
