--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
 		<h2 class="bs-docs-featurette-title">Чёрный скин для AIMP "AIMPBlack"</h2>
 		<p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хороший.</p>
 		<img alt="AIMPBlack" class="img-responsive" src="img/aimpblack.webp">
-		<p class="lead"><a class="btn btn-outline btn-lg" href="/aimpblack.acs4">Скачать</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="excdn/aimpblack.acs4">Скачать</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрный скин для игры в клиент osu!fx "Black!osu"</h2>
 		<p class="lead">После знакомства с клиентом популярной игры osu!fx, мне жутко понравилась полная поддержка скинов и я тут же ринулся делать полноценный чёрный скин.</p>
 		<img alt="Black!osu" class="img-responsive" src="img/blackosu.webp">
-		<p class="lead"><a class="btn btn-outline btn-lg" style="margin-right:10px;" href="black!osu[en].osk">EN</a><a class="btn btn-outline btn-lg" href="black!osu[ru].osk">RU</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" style="margin-right:10px;" href="excdn/black!osu[en].osk">EN</a><a class="btn btn-outline btn-lg" href="excdn/black!osu[ru].osk">RU</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная версия Аудиоплеера для боковой панели</h2>
 		<p class="lead">Я обнаружил аудиоплеер в китайском WebStore для браузера Whale, перекрасил в чёрный и перевёл его! Теперь, оно работает в браузерах Vivaldi, Opera и подобным браузерам с поддержкой боковой линии. Все иконки также переделаны.</p>
 		<img alt="AudioPlayer" class="img-responsive" src="img/audio_player.webp">
-		<p class="lead"><a class="btn btn-outline btn-lg" href="audio_player.crx">Установить</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="excdn/audio_player.crx">Установить</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная версия Stylus</h2>
 		<p class="lead">Перекрасил также расширение Stylus. Теперь, оно менеее лагучее и в нём приятно работать. Но хочу вас предупредить: подсветки нет, весь код белый. С одной стороны, это будет вам неудобно, но с другой, вы будете знать не цвет кода, а сам код, лол. Кстати, здесь выпилена аналитика.</p>
 		<img alt="BlackStylus" class="img-responsive" src="img/black_stylus.webp">
-		<p class="lead"><a class="btn btn-outline btn-lg" href="black_stylus.crx">Установить</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="excdn/black_stylus.crx">Установить</a></p></div>
 	</div>
 </body>
 </html>
