--- a/blackext/chrome/index.html
+++ b/blackext/chrome/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="../../style.css" rel="stylesheet" type="text/css">
 	<link href="../../excdn/googlefont.css" rel="stylesheet" type="text/css">
 	<link href="../../img/exewire.webp" rel="icon" type="image/png">
 	<title>Инструкция для Chrome</title>
