--- a/blackext/chrome/index.html
+++ b/blackext/chrome/index.html
@@ -12,41 +12,43 @@
 <body>
 	<div class="bs-docs-featurette">
 		<div class="container">
-			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img href="https://exewire.github.io/" alt="Chrome" class="img-responsive" src="../../img/chrome.webp"></a></span>
+			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img alt="Chrome" class="img-responsive" src="../../img/chrome.webp"></span>
 			<h1 class="f00-light text-white">Инструкция для Chrome</h1>
 		</div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
-		<h2 class="bs-docs-featurette-title">1.</h2>
-		<p class="lead">Установить расширение Chameleon, позволяющее устанавливать Opera-расширения в Chrome.</p>
-		<img alt="Инструкция №1" class="img-responsive" src="../../img/tutorial-chrome-1.webp">
-		<p class="lead"><a class="btn btn-outline btn-lg" href="https://chrome.google.com/webstore/detail/chameleon/dmpojjilddefgnhiicjcmhbkjgbbclob">Установить</a></p></div>
+			<h2 class="bs-docs-featurette-title">1.</h2>
+			<p class="lead">Установить расширение Chameleon, позволяющее устанавливать Opera-расширения в Chrome.</p><img alt="Инструкция №1" class="img-responsive" src="../../img/tutorial-chrome-1.webp">
+			<p class="lead"><a class="btn btn-outline btn-lg" href="https://chrome.google.com/webstore/detail/chameleon/dmpojjilddefgnhiicjcmhbkjgbbclob">Установить</a></p>
+		</div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">2.</h2>
-		<p class="lead">Нажать на кнопку Opera на сайте расширения Чёрный Интернет.</p>
-		<img alt="Инструкция №2" class="img-responsive" src="../../img/tutorial-chrome-2.webp">
-	</div>
+		<p class="lead">Нажать на кнопку Opera на сайте расширения Чёрный Интернет.</p><img alt="Инструкция №2" class="img-responsive" src="../../img/tutorial-chrome-2.webp"></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">3.</h2>
-		<p class="lead">И всё - пользуйтесь!</p>
-		<img alt="Инструкция №3" class="img-responsive" src="../../img/tutorial-chrome-3.webp">
-	</div>
+		<p class="lead">И всё - пользуйтесь!</p><img alt="Инструкция №3" class="img-responsive" src="../../img/tutorial-chrome-3.webp"></div>
 	</div>
 	<footer class="footer">
-  <div class="container">
-    <span class="footer-icon"><img href="https://exewire.github.io/" alt="Chrome" class="img-responsive" src="../../img/exewire.webp"></a></span>
-	<ul class="footer-links">
-      <li><a href="https://github.com/exewire/exewire.github.io">GitHub</a></li>
-      <li><a href="https://vk.com/exewire">VK</a></li>
-      <li><a href="https://discord.gg/">Discord</a></li>
-    </ul>
-    <p class="footer-info">© 2020 ExeWire Family. Все права защищены.</p>
-  </div>
-</footer>
+		<div class="container">
+			<span class="footer-icon"><img alt="Chrome" class="img-responsive" src="../../img/exewire.webp"></span>
+			<ul class="footer-links">
+				<li>
+					<a href="https://github.com/exewire/exewire.github.io">GitHub</a>
+				</li>
+				<li>
+					<a href="https://vk.com/exewire">VK</a>
+				</li>
+				<li>
+					<a href="https://discord.gg/">Discord</a>
+				</li>
+			</ul>
+			<p class="footer-info">© 2020 ExeWire Family. Все права защищены.</p>
+		</div>
+	</footer>
 </body>
 </html>
