--- a/index.html
+++ b/index.html
@@ -67,5 +67,15 @@
 		<img alt="BlackStylus" class="img-responsive" src="img/black_stylus.webp">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="excdn/black_stylus.crx">Установить</a></p></div>
 	</div>
+	<footer class="footer">
+		<div class="container">
+			<span class="footer-icon"><img alt="Chrome" class="img-responsive" src="../../img/exewire.webp"></span>
+			<ul class="footer-links">
+				<li><a href="https://github.com/exewire/exewire.github.io">GitHub</a></li>
+				<li><a href="https://vk.com/exewire">VK</a></li>
+				<li><a href="https://discord.gg/">Discord</a></li></ul>
+			<p class="footer-info">© 2020 ExeWire Family. Все права защищены.</p>
+		</div>
+	</footer>
 </body>
 </html>
