--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -55,7 +55,7 @@
 	</div>
 	<footer class="footer">
 		<div class="container">
-			<span class="footer-icon"><img alt="Chrome" class="img-responsive" src="../../img/exewire.webp"></span>
+			<span class="footer-icon"><img alt="Chrome" class="img-responsive" src="../img/exewire.webp"></span>
 			<ul class="footer-links">
 				<li><a href="https://github.com/exewire/exewire.github.io">GitHub</a></li>
 				<li><a href="https://vk.com/exewire">VK</a></li>
