--- a/blackext/chrome/index.html
+++ b/blackext/chrome/index.html
@@ -39,7 +39,7 @@
 			<ul class="footer-links">
 				<li><a href="https://github.com/exewire/exewire.github.io">GitHub</a></li>
 				<li><a href="https://vk.com/exewire">VK</a></li>
-				<li><a href="https://discord.gg/">Discord</a></li></ul>
+				<li><a href="https://discord.gg/5AXyXjm">Discord</a></li></ul>
 			<p class="footer-info">© 2020 ExeWire Family. Все права защищены.</p>
 		</div>
 	</footer>
