--- a/blackext/index.html
+++ b/blackext/index.html
@@ -20,6 +20,7 @@
 	<meta content="#000" name="theme-color">
 	<meta content="true" name="HandheldFriendly">
 	<meta content="width" name="MobileOptimized">
+	<meta name="theme-color" content="#000"/>
 	<meta content="summary_large_image" name="twitter:card">
 	<meta content="Чёрный Интернет" name="twitter:title">
 	<meta content="Сайт посвящён расширению 'Чёрный Интернет', которое можно скачать только здесь, т.к. именно отсюда разработчик решил раздавать новые версии своего детища" name="twitter:description">
