re-edit copyright

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<li><a href="https://github.com/exewire/exewire.github.io">GitHub</a></li>
 				<li><a href="https://vk.com/exewire">VK</a></li>
 				<li><a href="https://discord.gg/5AXyXjm">Discord</a></li></ul>
-			<p class="footer-info">© 2020 ExeWire Family. Все права защищены.</p>
+			<p class="footer-info">© 2020 ExeWire Developer. Все права защищены.</p>
 		</div>
 	</footer>
 </body>
