--- a/blackext/chrome/index.html
+++ b/blackext/chrome/index.html
@@ -31,7 +31,7 @@
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">3.</h2>
-		<p class="lead">И всё - пользуйтесь!</p><img alt="Инструкция №3" class="img-responsive" src="../../img/tutorial-chrome-3.webp"></div>
+		<p class="lead">И всё - пользуйтесь!</p><img alt="Инструкция №3" class="img-responsive" src="../../img/blackext.webp"></div>
 	</div>
 	<footer class="footer">
 		<div class="container">
