--- a/blackext/updates.html
+++ b/blackext/updates.html
@@ -13,6 +13,43 @@
 		<li class="update-version row">
 			<ol class="wrapper">
 				
+				<!-- Версия 0.1.69 -->
+				<li class="update-version row">
+					<span class="updates-timeline col span-1"></span>
+					<section class="informator col span-5">
+						<header class="update-version-header">
+							<h2 class="update-version-title">Версия 0.1.69</h2>
+							<small class="heading-caption">Выпуск <time>17 марта 2020</time></small>
+						</header>
+						<div class="lead">
+							<ol>
+								<li><strong class="update icon-bugfixes">Изменены сайты</strong> avito.ru, support.google.com, vk.com, github.com, instagram.com, 4pda.ru, ok.ru, web.dev, habr.ru, youtube.com, music.yandex.ru, web.whatsapp.com, wikipedia.ru, drive.google.com, x-minus.ru, sourceforge.com, toster.ru, lrepacks.ru, yandex.ru, google.com, gitlab.com, translate.google.com, support.google.com, ask.fm, youtube.com.</li>
+								<li><strong class="update icon-new">Добавлены сайты</strong> untwitch.com, opencollective.com, thelastgame.ru, kennethreitz.org, readthedocs.io, keybase.io, npmjs.com, f-droid.com, minecraft-inside.ru, ru-minecraft.ru, showcase.w5.vkforms.ru, vkpay.io, modules.pl, change.org, kinogo.by, diakov.net, aniqit.com, mel.fm, betterdiscordlibrary.com, animego.org, bolshoyvopros.ru, w3schools.com, whale.naver.com, googlechrome.github.io, apkmirror.com, apk-store.com, open-file.com, apk-dl.com, apkpure.com, electronjs.org.</li>
+								<li><strong class="update icon-new">Добавлены модули</strong> "SponsorVideo".</li>
+								<li><strong class="update icon-delete">Удалены модули</strong> "myCoub", "Discord Activity", "OldYoutube".</li>
+							</ol>
+						</div>
+					</section>
+					<aside class="update-details col span-6">
+						<div class="mask">
+							<h4 id="other-features">Отчёт исправлений</h4>
+							<ul>
+								<li>[С-083] Добавлено зеркало x-minus.pro.</li>
+								<li>[С-084] Переписаны с нуля ВКонтакте, WhatsApp, YouTube и GitHub.</li>
+								<li>[С-085] Мелкие доработки в других сайтах.</li>
+								<li>[Э-015] Стили сайтов ВКонтакте, GitHub и YouTube был переписаны с нуля и оптимизированы. Теперь, он выглядит более точно и без всякого мусора, который был раньше (просто вы его не видели, он оставался в коде). WhatsApp также больше вас не побеспокоит и будет работать стабильно из-за перехода на новую систему разработки стиля.</li>
+								<li>[Э-016] Модули "myCoub", "Discord Activity", "OldYoutube" были удалены из-за ненадобности: старый дизайн Ютуба официально закрывается, Дискордом через браузер мало кто пользуется, а myCoub стал платным и не хватает времени на изучение кода для удаления демо-режима. Просим извинения за причинённые вам неудобства (если это так).</li>
+								<li>[Э-017] Добавлено расширение SponsorVideo, позволяющее пропускать видео с спонсорской рекламой.</li>
+							</ul>
+							<h4 id="other-features">Известные проблемы</h4>
+							<ul>
+								<li>Если есть какие-либо проблемы с расширением, попробуйте очистить кэш. Если не помогло, проверьте работоспособность расширения на другом ПК. Если всё равно не работает, напишите разработчику в Дискорде. Ссылка будет в меню расширения.</li>
+								<li>У поисковых систем также есть чёрная тема. Если не работает - нажмите на кнопку "Разрешить доступ к результатам на странице поиска" на этой странице - opera://extensions/ .</li>
+							</ul>
+						</div>
+						</div>
+					</aside>
+				</li>
 				<!-- Версия 0.1.68 -->
 				<li class="update-version row">
 					<span class="updates-timeline col span-1"></span>
@@ -42,11 +79,6 @@
 								<li>[С-081] Добавлена бета стиля Реддит, могут быть ошибки, просьба репортить баги в мой Дискорд-канал.</li>
 								<li>[С-082] Переделана панель сервисов Google.</li>
 								<li>[Э-014] Updater оптимизирован и исправлен.</li>
-							</ul>
-							<h4 id="other-features">Известные проблемы</h4>
-							<ul>
-								<li>Если есть какие-либо проблемы с расширением, попробуйте очистить кэш. Если не помогло, проверьте работоспособность расширения на другом ПК. Если всё равно не работает, напишите разработчику в Дискорде. Ссылка будет в меню расширения.</li>
-								<li>У поисковых систем также есть чёрная тема. Если не работает - нажмите на кнопку "Разрешить доступ к результатам на странице поиска" на этой странице - opera://extensions/ .</li>
 							</ul>
 						</div>
 						</div>
