--- a/blackext/updates.html
+++ b/blackext/updates.html
@@ -37,7 +37,7 @@
 								<li>[С-083] Добавлено зеркало x-minus.pro.</li>
 								<li>[С-084] Переписаны с нуля ВКонтакте, WhatsApp, YouTube и GitHub.</li>
 								<li>[С-085] Мелкие доработки в других сайтах.</li>
-								<li>[Э-015] Стили сайтов ВКонтакте, GitHub и YouTube был переписаны с нуля и оптимизированы. Теперь, он выглядит более точно и без всякого мусора, который был раньше (просто вы его не видели, он оставался в коде). WhatsApp также больше вас не побеспокоит и будет работать стабильно из-за перехода на новую систему разработки стиля.</li>
+								<li>[Э-015] Стили сайтов ВКонтакте, GitHub и YouTube были переписаны с нуля и оптимизированы. Теперь, они выглядят более точно и без всякого мусора, который был раньше (просто вы его не видели, он оставался в коде). WhatsApp также больше вас не побеспокоит и будет работать стабильно из-за перехода на новую систему разработки стиля.</li>
 								<li>[Э-016] Модули "myCoub", "Discord Activity", "OldYoutube" были удалены из-за ненадобности: старый дизайн Ютуба официально закрывается, Дискордом через браузер мало кто пользуется, а myCoub стал платным и не хватает времени на изучение кода для удаления демо-режима. Просим извинения за причинённые вам неудобства (если это так).</li>
 								<li>[Э-017] Добавлено расширение SponsorVideo, позволяющее пропускать видео с спонсорской рекламой.</li>
 							</ul>
