--- a/blackext/chrome/index.html
+++ b/blackext/chrome/index.html
@@ -19,19 +19,31 @@
 	<div class="bs-docs-featurette">
 		<div class="container">
 			<h2 class="bs-docs-featurette-title">1.</h2>
-			<p class="lead">Установить расширение Chameleon, позволяющее устанавливать Opera-расширения в Chrome.</p><img alt="Инструкция №1" class="img-responsive" src="../../img/tutorial-chrome-1.webp">
+			<p class="lead">Установить расширение Chameleon, позволяющее устанавливать Opera-расширения в Chrome.</p>
+			<img alt="Инструкция №1" class="img-responsive" src="../../img/tutorial-chrome-1.webp">
 			<p class="lead"><a class="btn btn-outline btn-lg" href="https://chrome.google.com/webstore/detail/chameleon/dmpojjilddefgnhiicjcmhbkjgbbclob">Установить</a></p>
 		</div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">2.</h2>
-		<p class="lead">Нажать на кнопку Opera на сайте расширения Чёрный Интернет.</p><img alt="Инструкция №2" class="img-responsive" src="../../img/tutorial-chrome-2.webp"></div>
+		<p class="lead">Нажать на кнопку Opera на сайте расширения Чёрный Интернет. Вы должны скачать файл расширения. Если у вас не получается, скачайте через другой браузер. Просим извинения за неудобства, но по другому никак. Скажите "спасибо" Google за запрет установки расширений НЕ ИЗ их магазина WebStore.</p>
+		<img alt="Инструкция №2" class="img-responsive" src="../../img/tutorial-chrome-2.webp"></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">3.</h2>
-		<p class="lead">И всё - пользуйтесь!</p><img alt="Инструкция №3" class="img-responsive" src="../../img/blackext.webp"></div>
+		<p class="lead">Откройте правой кнопкой мыши настройки расширения Chameleon.</p><img alt="Инструкция №3" class="img-responsive" src="../../img/tutorial-chrome-3.webp"></div>
+	</div>
+	<div class="bs-docs-featurette">
+		<div class="container">
+		<h2 class="bs-docs-featurette-title">4.</h2>
+		<p class="lead">Добавьте файл расширения.</p><img alt="Инструкция №4" class="img-responsive" src="../../img/tutorial-chrome-4.webp"></div>
+	</div>
+	<div class="bs-docs-featurette">
+		<div class="container">
+		<h2 class="bs-docs-featurette-title">5.</h2>
+		<p class="lead">И всё - пользуйтесь!</p><img alt="Инструкция №5" class="img-responsive" src="../../img/blackext.webp"></div>
 	</div>
 	<footer class="footer">
 		<div class="container">
