add font in the excdn

--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -8,6 +8,7 @@
 	<meta content="ExeWire" name="author">
 	<title>Чёрные темы</title>
 	<link href="../style.css" rel="stylesheet">
+	<link href="../../excdn/googlefont.css" rel="stylesheet" type="text/css">
 	<link href="../img/exewire.webp" rel="icon" type="image/png">
 </head>
 <body class="bs-docs-home">
