--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	<meta content="ExeWire" name="author">
 	<title>ExeWire Developer</title>
 	<link href="style.css" rel="stylesheet">
+	<link href="../../excdn/googlefont.css" rel="stylesheet" type="text/css">
 	<link href="img/exewire.webp" rel="icon" type="image/png">
 </head>
 <body class="bs-docs-home">
