--- a/blackext/index.html
+++ b/blackext/index.html
@@ -78,8 +78,8 @@
 							<p class="is-size-6">v.0.1.69 [17.03.2020]</p>
 						</div>
 						<div class="column">
-							<a class="button is-info is-large" href="https://exewire.github.io/blackext/blackinternet-0.1.16-fx.xpi">Firefox</a>
-							<p class="is-size-6">v.0.1.16 [17.02.2020]</p>
+							<a class="button is-info is-large" href="https://addons.mozilla.org/ru/firefox/addon/black-internet/">Firefox</a>
+							<p class="is-size-6">v.0.1.18 [17.03.2020]</p>
 						</div>
 						<div class="column">
 							<a class="button is-info is-large" href="https://exewire.github.io/blackext/blackinternet-0.1.6.mxaddon">Maxthon</a>
